fixed overflow issue in outputbar

--- a/client/src/styles/outputBar.css
+++ b/client/src/styles/outputBar.css
@@ -13,5 +13,7 @@
     font-size: 5rem;
     font-weight: bold;
     width: 88vw;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
